--- a/news.html
+++ b/news.html
@@ -307,11 +307,11 @@
         <main>
             <article>
                 <a href="#">
-                    <img src="https://media.discordapp.net/attachments/1101785167233826846/1187780949124075571/OIP.png?ex=65982236&is=6585ad36&hm=398261bbdec4b176aa95ff49d933e8baf34a30fcc24a69784843e884490f5e7c&=&format=webp&quality=lossless" alt="News Image">
+                    <img src="https://media.discordapp.net/attachments/1101785167233826846/1190653638188744714/shutterstock-134907293.png?ex=65a2959c&is=6590209c&hm=76cf8e78cc89d5931df91b90e84ccd2467a7f91c33b7198204cc7757e16810df&=&format=webp&quality=lossless&width=998&height=662" alt="News Image">
                 </a>
-                <h2>New Eco-Friendly Park Opens in Elementsia</h2>
+                <h2>Elementsia to start massive economic reforms</h2>
                 <p>
-                    Elementsia celebrates the inauguration of a state-of-the-art eco-friendly park, showcasing sustainable design and green initiatives. The park aims to provide a serene and environmentally conscious space for the community.
+                    Elementsia celebrates the new revolution, for this will make Elementsia more independent. This process is not quick task, but once the project is completed Elementsia will be one competitive economy!
                 </p>
                 <a href="#" class="read-more">Read more</a>
             </article>
