--- a/about-us.html
+++ b/about-us.html
@@ -8,6 +8,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <link rel="icon" type="image/x-icon" href="C:\Users\laubs\Downloads\Test 01.png">
 
 </head>
 <body>
@@ -22,20 +23,20 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="About-us.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">History</a>
+          <a class="nav-link" href="history.html">History</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Our Ministries</a>
+          <a class="nav-link" href="ministries.html">Our Ministries</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">News</a>
-          </li>
+          <a class="nav-link" href="news.html">News</a>
+        </li>
       </ul>
     </div>
     <!-- Add the following inside your navbar right before the closing </nav> tag -->
