--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="About-us.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">History</a>
+          <a class="nav-link" href="history.html">History</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Our Ministries</a>
+          <a class="nav-link" href="ministries.html">Our Ministries</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="news.html">News</a>
-          </li>
+          <a class="nav-link" href="news.html">News</a>
+        </li>
       </ul>
     </div>
     <!-- Add the following inside your navbar right before the closing </nav> tag -->
