--- a/about-us.html
+++ b/about-us.html
@@ -123,10 +123,10 @@
             </div>
         </div>
         <div class="footer-links">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Use</a>
-            <a href="#">Accessibility</a>
-        </div>
+          <a href="privacy.html">Privacy Policy</a>
+          <a href="terms.html">Terms of Use</a>
+          <a href="acc.html">Accessibility</a>
+      </div>
         <p>&copy; Elementsian Government 2024. All rights reserved.</p>
     </div>
 </footer>
