--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link rel="stylesheet" type="text/css" href="styles.css">
 
   <!-- Bootstrap scripts (jQuery and Popper.js) -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -13,6 +12,332 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </head>
+<style>
+  body {
+    padding-top: 0px;
+    background-color: rgba(36, 86, 88, 0.278);
+    color: #fff;
+  }
+
+  header {
+    background-color: #001f3f;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    border-bottom: 2px rgb(230, 193, 13) solid;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-family: 'Times New Roman', Times, serif;
+  }
+
+  header img {
+    max-width: 85px;
+    margin-right: 10px;
+  }
+
+  nav {
+    background-color: #003366;
+    padding: 8px;
+    text-align: center;
+    animation: fadeIn 1s ease-in-out;
+  }
+
+  nav ul {
+    margin-top: 4px;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+  }
+
+  nav li {
+    margin: 0 15px;
+  }
+
+  nav a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 20px;
+    transition: background-color 0.3s, color 0.3s;
+    display: flex;
+    align-items: center;
+  }
+
+  nav a i {
+    margin-right: 5px;
+  }
+
+  nav a:hover {
+    background-color: #fff;
+    color: #001f3f;
+  }
+
+  .carousel-section {
+    background-color: #a18f36;
+    padding: 50px;
+    text-align: center;
+  }
+
+  .about-section,
+  .values-section {
+    background-color: #165170;
+    padding: 50px;
+    text-align: center;
+  }
+
+  .welcome-section {
+    background-image: url('https://th.bing.com/th/id/R.d2d3f5a946d8263ef2195b5465ec53ec?rik=STPFJ6F183yGqQ&pid=ImgRaw&r=0');
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    padding: 50px;
+    text-align: center;
+  }
+
+  .welcome-section h2 {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+  }
+
+  .welcome-section p {
+    font-size: 1.2em;
+    margin-bottom: 30px;
+  }
+
+  .welcome-section a.btn-primary {
+    background-color: #fff;
+    color: #006400;
+    border-color: #fff;
+  }
+
+  .welcome-section a.btn-primary:hover {
+    background-color: #756825;
+    color: #fff;
+    border-color: #fff;
+  }
+
+  .navbar-title {
+    color: #060606;
+    font-weight: bold;
+    margin-right: 20px;
+    margin-top: 15px;
+  }
+
+  @media (max-width: 767px) {
+    .navbar-title {
+      display: none;
+    }
+  }
+
+  .about-section a.btn-primary {
+    background-color: #fff;
+    color: #006400;
+    border-color: #fff;
+  }
+
+  .about-section a.btn-primary:hover {
+    background-color: #b09a30;
+    color: #fff;
+    border-color: #fff;
+  }
+
+  .about-section {
+    background-color: #1a4258;
+    padding: 50px;
+    text-align: center;
+    margin-top: 0;
+  }
+
+  @media (max-width: 767px) {
+    .about-section {
+      padding: 20px;
+    }
+  }
+
+  footer {
+    background-color: #1a4657;
+    color: #ffffff;
+    padding: 20px 0;
+    text-align: center;
+    font-family: 'Arial', sans-serif;
+    margin-top: 20px;
+    border-top: solid black 3px;
+  }
+
+  .footer-contact {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+
+  .footer-contact-item {
+    margin-right: 20px;
+  }
+
+  .footer-contact-item i {
+    font-size: 24px;
+    margin-bottom: 10px;
+    display: block;
+  }
+
+  .footer-links a {
+    color: white;
+    margin-top: 10px;
+    text-decoration: none;
+  }
+
+  .footer-contact-item a:hover {
+    text-decoration: underline;
+  }
+
+  .footer-links a {
+    color: #ffffff;
+    text-decoration: none;
+    margin: 0 20px;
+    font-weight: bold;
+    transition: color 0.3s;
+  }
+
+  .footer-links a:hover {
+    color: #555;
+  }
+
+  .hamburger-menu div {
+    width: 30px;
+    height: 3px;
+    background-color: white;
+    margin: 6px 0;
+    transition: 0.4s;
+    margin-left: 20px;
+  }
+
+  .mobile-nav {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    background-color: #003366;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  }
+
+  .mobile-nav.show {
+    opacity: 1;
+    transform: translateY(0);
+    top: 60px;
+  }
+
+  .hamburger-menu {
+    display: none;
+    cursor: pointer;
+    order: -1;
+    margin: 0 auto;
+    z-index: 1001;
+  }
+
+  .mobile-nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .mobile-nav a {
+    color: white;
+    text-decoration: none;
+    padding: 15px;
+    text-align: center;
+    display: block;
+    transition: background-color 0.3s, color 0.3s;
+  }
+
+  .mobile-nav a:hover {
+    background-color: #fff;
+    color: #001f3f;
+  }
+
+  @media (max-width: 768px) {
+    .mobile-nav.show {
+      display: flex;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .hamburger-menu {
+      display: block;
+    }
+
+    nav ul {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+      text-align: center;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      background-color: #003366;
+      z-index: 999;
+    }
+
+    nav ul.show {
+      display: flex;
+    }
+
+    nav li {
+      margin: 0;
+      width: 100%;
+    }
+  }
+
+  @media (max-width: 768px) {
+    header {
+      padding: 10px 0;
+    }
+
+    header img {
+      margin-bottom: 0;
+    }
+  }
+
+  @media (max-width: 768px) {
+    nav {
+      padding: 8px 0;
+    }
+
+    nav ul {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    nav li {
+      margin: 10px 0;
+      margin-left: 4px;
+    }
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .ministry {
+      width: calc(100% - 20px);
+    }
+  }
+</style>
+
 <body>
 
   <header>
