--- a/ministries.html
+++ b/ministries.html
@@ -7,10 +7,11 @@
     <!-- Font Awesome CSS link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="icon" href="https://media.discordapp.net/attachments/1101785167233826846/1193168985961795674/FAVICON.png?ex=65abbc36&is=65994736&hm=1b5fae5b263d01020c4474cda36cc0cfe83e7a614c971674589d3cb37984b533&=&format=webp&quality=lossless&width=80&height=80" type="image/png">
+    <link rel="shortcut icon" href="https://media.discordapp.net/attachments/1101785167233826846/1193168985961795674/FAVICON.png?ex=65abbc36&is=65994736&hm=1b5fae5b263d01020c4474cda36cc0cfe83e7a614c971674589d3cb37984b533&=&format=webp&quality=lossless&width=80&height=80" type="image/png">
     <style>
         body {
     font-family: 'Arial', sans-serif;
@@ -308,13 +309,13 @@ nav a:hover {
     <!-- Navigation Bar -->
     <nav>
         <ul>
-            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
-            <li><a href="history.html"><i class="fas fa-history"></i> History</a></li>
-            <li><a href="ministries.html"><i class="fas fa-university"></i> Ministries</a></li>
-            <li><a href="news.html"><i class="fas fa-newspaper"></i> News</a></li>
-            <li><a href="immigrate.html"><i class="fas fa-cogs"></i> Immigration</a></li>
-            <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+          <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+          <li><a href="aboutmombile.html"><i class="fas fa-info-circle"></i> About (WIP)</a></li>
+          <li><a href="history.html"><i class="fas fa-history"></i> History (WIP)</a></li>
+          <li><a href="ministries.html"><i class="fas fa-university"></i> Ministries</a></li>
+          <li><a href="news.html"><i class="fas fa-newspaper"></i> News</a></li>
+          <li><a href="immigrate.html"><i class="fas fa-cogs"></i> Immigration (WIP)</a></li>
+          <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact (WIP)</a></li>
         </ul>
     
         <div class="hamburger-menu" onclick="toggleMobileNav()">
@@ -326,12 +327,12 @@ nav a:hover {
     <div class="mobile-nav" id="mobileNav">
         <ul>
           <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-          <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
-          <li><a href="history.html"><i class="fas fa-history"></i> History</a></li>
+          <li><a href="aboutmombile.html"><i class="fas fa-info-circle"></i> About (WIP)</a></li>
+          <li><a href="history.html"><i class="fas fa-history"></i> History (WIP)</a></li>
           <li><a href="ministries.html"><i class="fas fa-university"></i> Ministries</a></li>
           <li><a href="news.html"><i class="fas fa-newspaper"></i> News</a></li>
-          <li><a href="immigrate.html"><i class="fas fa-cogs"></i> Immigration</a></li>
-          <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+          <li><a href="immigrate.html"><i class="fas fa-cogs"></i> Immigration (WIP)</a></li>
+          <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact (WIP)</a></li>
         </ul>
     </div>
       
