--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curreny Exchange</title>
+    <title>Elementsian Government</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome CDN -->
     <link rel="icon" type="image/png" href="https://media.discordapp.net/attachments/1101785167233826846/1205816432965853214/AXIOM.png?ex=65d9bf10&is=65c74a10&hm=c34a43b36fa44623dee26b465986a16fd378c5ff0314c546379a957fed2367b2&=&format=webp&quality=lossless&width=662&height=662">
     <style>
