--- a/why.html
+++ b/why.html
@@ -125,6 +125,7 @@
         <p>
             If you have any questions or concerns, please feel free to contact us on our <a href="https://discord.gg/KWsBeTaVkz" target="_blank" class="discord-icon"><i class="fab fa-discord icon"></i>Discord server</a>.
         </p>
+        <p>Elementsia</p>
         <p>Thank you.</p>
     </div>
 </body>
