--- a/why.html
+++ b/why.html
@@ -102,7 +102,7 @@
             Dear Aros Elyuim members,
         </p>
         <p>
-            We regret to inform you that access to our website has been restricted for all Aros Elyuim members. This decision was not made lightly, and we would like to provide transparency regarding the reasons behind it.
+            We regret to inform you that access to our website has been restricted for all Aros Elyuim members. This decision was not made lightly, and I would like to provide transparency regarding the reasons behind it.
         </p>
         <h2><i class="fas fa-exclamation-triangle icon"></i> Reasons:</h2>
         <ul>
