--- a/why.html
+++ b/why.html
@@ -113,7 +113,7 @@
                 <i class="fas fa-exclamation-circle icon"></i> <strong>Past Incidents:</strong> Previous interactions with Aros Elyuim members have occasionally led to disruptions or misunderstandings.
             </li>
             <li>
-                <i class="fas fa-users icon"></i> <strong>Community Protection:</strong> As the owner of the Aros Elyuim website, Elementsia prioritizes the well-being and harmony of our platform and user community.
+                <i class="fas fa-users icon"></i> <strong>Community Protection:</strong> As the owner of Axiom and all related websites, Elementsia prioritizes the well-being and harmony of Axiom's platform and user community.
             </li>
             <li>
                 <i class="fas fa-ban icon"></i> <strong>Policy Compliance:</strong> Some Aros Elyuim members have inadvertently or repeatedly breached our website policies, necessitating this measure.
