--- a/main.html
+++ b/main.html
@@ -352,7 +352,7 @@
 <!-- Navigation Bar -->
 <nav>
     <ul>
-      <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+      <li><a href="main.html"><i class="fas fa-home"></i> Home</a></li>
       <li><a href="aboutmombile.html"><i class="fas fa-info-circle"></i> About (WIP)</a></li>
       <li><a href="history.html"><i class="fas fa-history"></i> History (WIP)</a></li>
       <li><a href="ministries.html"><i class="fas fa-university"></i> Ministries</a></li>
