--- a/why.html
+++ b/why.html
@@ -13,7 +13,7 @@
             background-color: #f5f5f5;
             padding: 20px;
             margin: 0;
-            background-image: url("https://media.discordapp.net/attachments/1101785167233826846/1205861829830512690/4.png?ex=65d9e958&is=65c77458&hm=1b95740287c73c5e0985b1e91adcd67247d07feeb13ce0f1a44bdd51bc35804c&=&format=webp&quality=lossless&width=1193&height=671");
+            background-image: url("https://media.discordapp.net/attachments/1233775792278868045/1233779419739590696/4.png?ex=662e5620&is=662d04a0&hm=4e4b4949e5bc751e0b717fa791cdc14274b0126a2e234d56be6832530afa0a9c&=&format=webp&quality=lossless&width=687&height=386");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
@@ -93,6 +93,19 @@
                 transform: translateY(0);
             }
         }
+        .axiom-icon {
+            background-color: #43718c;
+            color: white;
+            padding: 10px;
+            border-radius: 25px;
+            transition: 0.2s ease-in-out ;
+            width: 100px;
+        }
+        .axiom-icon:hover {
+            color: white;
+            background-color: black;
+            width: calc(100% + 30px);
+        }
     </style>
 </head>
 <body>
@@ -113,7 +126,7 @@
                 <i class="fas fa-exclamation-circle icon"></i> <strong>Past Incidents:</strong> Previous interactions with Aros Elyuim members have occasionally led to disruptions or misunderstandings.
             </li>
             <li>
-                <i class="fas fa-users icon"></i> <strong>Community Protection:</strong> As the owner of Axiom and all related websites, Elementsia prioritizes the well-being and harmony of Axiom's platform and user community.
+                <i class="fas fa-users icon"></i> <strong>Community Protection:</strong> As the owner of the Aros Elyuim website, Elementsia prioritizes the well-being and harmony of our platform and user community.
             </li>
             <li>
                 <i class="fas fa-ban icon"></i> <strong>Policy Compliance:</strong> Some Aros Elyuim members have inadvertently or repeatedly breached our website policies, necessitating this measure.
