--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url("https://media.discordapp.net/attachments/1233775792278868045/1233779419739590696/4.png?ex=662e5620&is=662d04a0&hm=4e4b4949e5bc751e0b717fa791cdc14274b0126a2e234d56be6832530afa0a9c&=&format=webp&quality=lossless&width=687&height=386");
+            background-image: url("https://media.discordapp.net/attachments/1233796295446237227/1238875277933809736/pexels-eberhardgross-1421903.jpg?ex=6640e003&is=663f8e83&hm=8b5c048d7a9129e524a6010e186388bf970dd13aaff3c510b0fc95793586c5cd&=&format=webp&width=656&height=437");
             background-size: cover;
             background-repeat: no-repeat;
             position: relative;
